<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anyCardViewHolderContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E9EAEC"
    android:clipToPadding="false">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/imBankLogo"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:elevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/alpha_bank" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imBankLogo"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvBank"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/firstStarIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_star_selector" />

                        <ImageView
                            android:id="@+id/secondStarIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_star_selector" />

                        <ImageView
                            android:id="@+id/thirdStarIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_star_selector" />

                        <ImageView
                            android:id="@+id/fourthStarIcom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_star_selector" />

                        <ImageView
                            android:id="@+id/fifthStarIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_star_selector" />

                        <TextView
                            android:id="@+id/tvRating"
                            android:layout_width="114dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textColor="#F78800"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="110dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="@string/sum"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/tvSumRange"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="110dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="@string/interest_rate"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/tvPercent"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="110dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="@string/term"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/tvTerm"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/visa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/visa" />

                    <ImageView
                        android:id="@+id/mastercard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/master" />

                    <ImageView
                        android:id="@+id/y_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/y_money" />

                    <ImageView
                        android:id="@+id/qiwi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/qivi" />

                    <ImageView
                        android:id="@+id/mir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/mir" />

                    <ImageView
                        android:id="@+id/cash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/cash" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnArrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/arrange"
                        app:cornerRadius="5dp"
                        android:stateListAnimator="@animator/my_button_animator"/>

                    <Button
                        android:id="@+id/buttonDetails"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/details"
                        android:textColor="@color/colorPrimary"
                        app:cornerRadius="5dp"
                        android:stateListAnimator="@animator/my_button_animator"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>